--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
     z-index: 343;
 
     background-color: var(--bg-gray-light);
-    
+    /* border: 2px solid yellow; */
 }
 
 .header-company-logo {
@@ -125,6 +125,8 @@ body {
     /* flex-wrap: wrap-reverse; */
     /* grid-template-columns: auto 400px; */
     padding: 6rem 0;
+    position: relative;
+    z-index: 200;
 }
 
 .text-text {
@@ -133,7 +135,9 @@ body {
     
 }
 
-
+.mobile-left {
+    display: none;
+}
 .text-bold {
     font-size: 85px;
     font-family: 'DM Serif Display', serif;
@@ -154,7 +158,7 @@ body {
     text-transform: uppercase;
     padding: .7rem 2rem;
     font-size: 16px;
-    margin-top: 20px;
+    margin-top: 20px !important;
     width: max-content;
     cursor: pointer;
 }
@@ -182,38 +186,7 @@ body {
 
 }
 
-@media (max-width: 1440px ) {
-    .text-bold {
-        font-size: 79px;
-    }
-    .text-text {
-        padding: 2rem 1rem 0 1px;
-    }
-    .container > div {
-        padding: 0 5% ;
-    }
-    .svg {
-        width: 30%;
-    }
 
-    .top-display {
-        padding: 0 5% !important;
-        height: 34rem;
-    }
-
-    
-   
-
-}
-
-@media (max-width: 1040px )  {
-    .text-bold {
-        font-size: 50px;
-    }
-    .top-display {
-        height: 30rem;
-    }
-}
 
 
 .more {
@@ -374,3 +347,171 @@ body {
     cursor: pointer;
 }
 
+@media (max-width: 1440px ) {
+    .text-bold {
+        font-size: 79px;
+    }
+    .text-text {
+        padding: 2rem 1rem 0 1px;
+    }
+    .container > div {
+        padding: 0 5% ;
+    }
+    .svg {
+        width: 30%;
+    }
+
+    .top-display {
+        padding: 0 5% ;
+        height: 34rem;
+    }
+
+    
+   
+
+}
+
+@media (max-width: 1040px )  {
+    .header-links > ol {
+        margin: 5px 7px;
+    }
+    .text-text {
+        padding-top: 0;
+    }
+    .text-container {
+        padding: 3rem 0;
+    }
+    .text-bold {
+        font-size: 50px;
+    }
+    .top-display {
+        height: 25rem;
+    }
+    .more-image {
+        padding: 0 0;
+    }
+    .more-title {
+        padding: 2rem 0;
+        font-size: 50px;
+    }
+    .more-name {
+        font-size: 28px;
+    }
+    .more-description {
+        font-size: 18px;
+    }
+    
+    .more-work {
+        font-size: 1rem;
+    }
+    
+    .more-about {
+        padding: 3rem 2rem;
+    }
+
+    .more-about-work {
+        font-size: 40px;
+    }
+    .footer-svg > svg {
+        width: 100%;
+    }
+}
+
+
+
+@media (max-width: 767px ) {
+    .header {
+        display: none;
+    }
+    .text-container {
+        flex-wrap: wrap-reverse;
+    }
+    .svg {
+        display: none;
+    }
+    .top-svg {
+        display: none;
+    }
+
+    .mobile-left {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .text-text {
+        position: relative;
+        padding: 3rem 2rem;
+        text-align: center;
+    }
+    
+    .text-bold {
+        font-size: 50px;
+    }
+    
+    .text-image {
+        width: 100% !important;
+        max-width: 767px;
+        margin: auto;
+        padding: 0 0;
+    }
+    .top-display {
+        padding: 0 0;
+        height: max-content;
+    }
+    .conatiner > div {
+        padding: 0 0;
+    }
+    .text-plan {
+        margin: auto;
+        
+    }
+
+    .more {
+        padding: 0 2rem !important;
+        text-align: center;
+    }
+    .more-title {
+        font-size: 40px;
+    }
+
+    .more-detail {
+        grid-template-columns: auto;
+        row-gap: 40px;
+    }
+
+    .more-name {
+        padding-top: .2rem;
+    }
+
+    .more-about {
+        padding: 3rem 1rem;
+    }
+    .more-about-work {
+        font-size: 34px;
+    }
+    .more-work {
+        margin: 20px 18px;
+    }
+  
+}
+
+@media (max-width: 600px ) {
+    .more-svg {
+        display: none;
+    }
+    .more-about {
+
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: stretch;
+        padding: 4rem 1rem 1rem 1rem ;
+    }
+    .more-about-work {
+        /* font-size: 30px; */
+        /* padding: 1rem 1rem; */
+    }
+    
+
+}
