--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,12 @@ body {
     
 } 
 
-.container {
+.all-container {
     position: relative;
     max-width: 1700px;
     margin: auto;
 }
-.container > div {
+.all-container > div {
     padding:  0 10%;
     /* border: 2px solid blueviolet; */
     /* width: 100%; */
@@ -29,9 +29,9 @@ body {
 
 .header {
 
-    display: flex;
+    /* display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
     text-transform: uppercase;
     padding: 1rem 0;
 
@@ -42,6 +42,9 @@ body {
     /* border: 2px solid yellow; */
 }
 
+.navbar-collapse {
+    justify-content: end !important;
+}
 .header-company-logo {
     font-weight: 600;
 }
@@ -56,7 +59,7 @@ body {
     font-family: 'Karla', sans-serif;
 }
 
-.header-links > ol {
+.header-links > li {
 
     padding: 10px 10px;
     margin:  5px 10px;
@@ -70,15 +73,19 @@ body {
     text-transform: uppercase;
 } 
 
-.header-plan:hover {
-    background-color: var(--bg-violet-dark1);
-    color: var(--bg-gray-light);
+.header-plan:hover  {
+    background-color: var(--bg-violet-dark2) !important;
+    color: var(--bg-gray-light) !important;
     cursor: pointer;
+}
+
+.collapse-svg {
+    display: none;
 }
 
 .header-list:hover {
     cursor: pointer;
-    color: var(--bg-violet-dark1);
+    color: var(--bg-violet-dark2);
 }
 
 .top-container {
@@ -258,7 +265,7 @@ body {
     position: absolute;
     top: 1rem;
     right: 2px;
-    z-index: 30;
+    z-index: 300;
     /* border: 2px solid var(--bg-blue-gray); */
 }
 
@@ -355,7 +362,7 @@ body {
     .text-text {
         padding: 2rem 1rem 0 1px;
     }
-    .container > div {
+    .all-container > div {
         padding: 0 5% ;
     }
     .svg {
@@ -422,7 +429,51 @@ body {
         padding: 0 0;
     }
     .header {
-        display: none;
+        padding: 0 0  !important;
+        /* display: none; */
+    }
+    .header-links {
+        padding: 20px;
+    }
+    .header-links > li {
+        color: var(--bg-gray-light) !important;
+        margin: 10px;
+    }
+    
+
+    .header-links > li:hover {
+        color: initial;
+        background-color: initial !important;
+    }
+
+
+    .header-links > .header-plan {
+        padding: 10px  40px;
+        border-color: var(--bg-gray-light) ;
+    }
+    .container-fluid  {
+        padding: 0 0;
+
+    }
+
+    .container-fluid .header-company-logo , .container-fluid button {
+        margin: 10px 20px;
+    }
+
+    .navbar-collapse {
+        background-color: var(--bg-violet-dark1);
+        
+    }
+
+    .collapse-svg {
+        display: block;
+        text-align: end;
+        width: 100vw;
+        max-height: 250px;
+        overflow: hidden;
+    }   
+    .collapse-svg img {
+        width: 100%;
     }
     .text-container {
         flex-wrap: wrap-reverse;
